--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
+  },
+  "engines": {
+  "node": ">=18.18.0 <19.0.0"
   }
 }
